--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </nav>
     </footer>
     <script src="jpf_grids1.js"></script>
-    <script src="jpf_grids2.js"></script>
+    <!-- <script src="jpf_grids2.js"></script> -->
     <script src="jpf_hanjie.js"></script>
 </body>
 
